--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-light fixed-bottom">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-6 text-left">
         <span>Marcin Butora</span>
