--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
       <a class="navbar-brand" href="#">{{ titleApp }}</a>
       <button
         class="navbar-toggler"
