--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,3 +1,12 @@
-<div class="container">
-  <p>not found works!</p>
+<div class="container-fluid">
+  <div class="row notfound-container">
+    <span class="four">4</span>
+    <img src="../../../assets/images/soccer_ball.svg" class="soccer-ball" />
+    <span class="four">4</span>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <p class="message">strona nie została znaleziona</p>
+    </div>
+  </div>
 </div>
