--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -5,7 +5,7 @@
         <span>Marcin Butora</span>
       </div>
       <div class="col-6 text-right">
-        <span>{{ dateInfo | date: "y.M.d h:m:s" }}</span>
+        <span>{{ dateInfo | date: "y.M.d H:m" }}</span>
       </div>
     </div>
   </div>
