--- a/src/app/pages/ranking/ranking-page/ranking-page.component.html
+++ b/src/app/pages/ranking/ranking-page/ranking-page.component.html
@@ -1,17 +1,13 @@
-<div class="container">
+<div class="container-fluid">
   <form>
     <div class="form-group form-inline">
-      Szukaj klubu po nazwie:
-      <form>
-        <input
-          [(ngModel)]="termToSearch"
-          name="searchName"
-          (keypress)="filterList(termToSearch)"
-          class="form-control ml-2"
-          type="text"
-        />
-      </form>
-      {{ termToSearch }}
+      <input
+        [(ngModel)]="termToSearch"
+        name="searchName"
+        class="form-control ml-2"
+        type="text"
+        placeholder="Wpisz aby szukać"
+      />
     </div>
     <div class="table-responsive text-nowrap">
       <table class="table table-striped table-dark text-center mt">
@@ -29,7 +25,12 @@
           <th scope="col">Róznica bramek</th>
         </thead>
         <tbody class="table-light text-dark text-center">
-          <tr *ngFor="let item of rankingItemList?.data?.standings">
+          <tr
+            *ngFor="
+              let item of rankingItemList?.data?.standings
+                | filter: termToSearch
+            "
+          >
             <td>{{ item?.note?.rank }}</td>
             <td>
               <img src="{{ item.team.logos[0].href }}" width="50" height="50" />
