--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,19 @@
 <div class="container">
-  <p>homer works!</p>
+  <div class="row">
+    <div class="col-sm-4" *ngFor="let item of footballNews">
+      <div class="card text-center">
+        <div class="card-header">{{ item.header }}</div>
+        <div class="card-body">
+          <h5 class="card-title">{{ item.title }}</h5>
+          <p class="card-text">{{ item.content }}</p>
+          <a target="_blank" class="btn btn-primary" href="{{ item.link }}"
+            >Czytaj więcej</a
+          >
+        </div>
+        <div class="card-footer text-muted">
+          {{ item.data }}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
