--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -7,6 +7,7 @@
   <div class="row">
     <div class="col text-center">
       <p class="message">strona nie została znaleziona</p>
+      <p><a routerLink="/ranking">Powrót do rankingu</a></p>
     </div>
   </div>
 </div>
