--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,7 @@
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.content }}</p>
           <a target="_blank" class="btn btn-primary" href="{{ item.link }}"
-            >Czytaj więcej</a
-          >
+            >Czytaj więcej</a>
         </div>
         <div class="card-footer text-muted">
           {{ item.data }}
