--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -5,7 +5,7 @@
         <span>Marcin Butora</span>
       </div>
       <div class="col-6 text-right">
-        <span>{{ dateInfo | date: "fullDate shortTime" }}</span>
+        <span>{{ dateInfo | date: "y.M.dd h:mm" }}</span>
       </div>
     </div>
   </div>
